# nlpexercises

./: README.md  poetry.toml  pyproject.toml
data/exercise_3/: HW3.docx
data/exercise_5/: HW5.docx
data/exercise_6/: HW6.docx
src/: exercise1.ipynb  exercise2.ipynb  exercise3.ipynb  exercise4.ipynb  exercise5.ipynb  exercise6.ipynb
src/exercise_2/: hmm.py  model_init.txt  out.txt  score.py  test.py  train.py
src/hmm/: hmm.py  test.py
tests/: test_nlpexercises.py
